# ManimNet

./: LICENSE  README.md  pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
src/network_manim/: __init__.py  cli.py  config.py  graph_utils.py  main.py
src/network_manim/scenes/: multi_clique.py
tests/: test_graph_utils.py
